style.css
body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: #6a6a6c;
    color: #e8eaed;
    font-family:Arial, Helvetica, sans-serif;
    height: 90vh;
}

header {
    font-size: 32px;
    flex: 1;
    /* margin-left: 42px; */
    text-align: center;
}
main {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 90vw;
    height: 80vh;
    flex: 4;
}

main .left {
    flex: 1;
}

main .center {
    flex-shrink: 0;
    flex-grow: 0;
    min-height: 60vh;
    /* max-width: 20vw; */
    background-color: #202124;
    border-radius: 12px;
    border: 12px solid #202124;
}

main .center .calculator {
    display: grid;
    grid-template-columns: repeat(1fr);
    /* flex-direction: column;
    justify-content: space-between;
    align-items: center; */
    /* grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr; */
}

main .right {
    flex: 1;
}


button {
    border-radius: 50%;
    border: 0px;
    font-size: 28px;
    padding: 4px 10px;
    width: 100%;
    height: auto;
    cursor: pointer;
}

.row1, .row2, .row3, .row4, .row5 {
    display:flex;
    justify-content: space-between;
    gap: 10px;
    padding: 8px;
}

.row1 button {
    background-color: #9f9f9f;
    min-width: 42px;
    max-width: 42px;
    padding: 4px 10px 4px;
}

.row1 button:hover {
    background-color: #555454;
}

.row1 button:active {
    box-shadow: -2px -2px #9f9f9f;
}

.row2 button, .row3 button, .row4 button, .row5 button {
    background-color: #313131;
    color: white;
    
}

#column4 {
    background-color: #f69906;
    color: white;
    /* flex: 1 0; */
    min-width: 42px;
    padding: 4px 10px 4px;
}

#column4:hover {
    background-color: #f8c675;
}

.decimal {
    flex: 1 0;
    min-width: 42px;
}

.screen {
    border: 1px solid;
    border-radius: 8px;
    text-align: right;
    padding: 4px 18px;
    font-size: 20px;
    min-height: 80px;
    flex-grow: 1 1 0;
    display: flex;
    flex-direction: column;
    font-weight: 700;
}

.screen p {
    min-height: 40px;
    margin: 2px;
    text-align: right;
}

.screen .bottom {
    font-size: 32px;
}

#zero {
    max-width: 42px;
}

#equals {
    /* grid-column: (span 2); */
    /* flex: 2 0 1; */
    background-color: #f69906;
    color: white;
    border-radius: 2.5rem;
}

#equals:hover {
    background-color: #f8c675;
}

#equals:active {
    box-shadow: -2px -2px #f69906;
}

.operand:hover {
    background-color: #404040;
}

.operand:active {
    box-shadow: -2px -2px #515050;
}

